--- a/multi_robot_controller/docs/latex/d2/d09/classLyapunovController.tex
+++ b/multi_robot_controller/docs/latex/d2/d09/classLyapunovController.tex
@@ -11,11 +11,12 @@ Inheritance diagram for Lyapunov\+Controller\+:\nopagebreak
 \end{figure}
 
 
-Collaboration diagram for Lyapunov\+Controller\+:\nopagebreak
+Collaboration diagram for Lyapunov\+Controller\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
-\includegraphics[width=181pt]{de/de2/classLyapunovController__coll__graph}
+\includegraphics[width=188pt]{de/de2/classLyapunovController__coll__graph}
 \end{center}
 \end{figure}
 \subsection*{Classes}
