--- a/multi_robot_controller/docs/latex/d2/d4e/classPassTroughController.tex
+++ b/multi_robot_controller/docs/latex/d2/d4e/classPassTroughController.tex
@@ -11,11 +11,12 @@ Inheritance diagram for Pass\+Trough\+Controller\+:\nopagebreak
 \end{figure}
 
 
-Collaboration diagram for Pass\+Trough\+Controller\+:\nopagebreak
+Collaboration diagram for Pass\+Trough\+Controller\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
-\includegraphics[width=191pt]{d5/d84/classPassTroughController__coll__graph}
+\includegraphics[width=193pt]{d5/d84/classPassTroughController__coll__graph}
 \end{center}
 \end{figure}
 \subsection*{Public Member Functions}
