--- a/multi_robot_controller/docs/latex/da/ddc/structController_1_1ControlVector.tex
+++ b/multi_robot_controller/docs/latex/da/ddc/structController_1_1ControlVector.tex
@@ -1,23 +1,54 @@
 \hypertarget{structController_1_1ControlVector}{}\section{Controller\+:\+:Control\+Vector Struct Reference}
 \label{structController_1_1ControlVector}\index{Controller\+::\+Control\+Vector@{Controller\+::\+Control\+Vector}}
+
+
+Defines the controllers output.  
+
+
+
+
+{\ttfamily \#include $<$controller.\+h$>$}
+
 \subsection*{Public Member Functions}
 \begin{DoxyCompactItemize}
 \item 
 \mbox{\Hypertarget{structController_1_1ControlVector_abf98db4ce95ac636bb5ac950b6b820b3}\label{structController_1_1ControlVector_abf98db4ce95ac636bb5ac950b6b820b3}} 
 \hyperlink{structController_1_1ControlVector_abf98db4ce95ac636bb5ac950b6b820b3}{Control\+Vector} ()
 \begin{DoxyCompactList}\small\item\em Construct a new Control Vector object with default parameters. \end{DoxyCompactList}\item 
-\mbox{\Hypertarget{structController_1_1ControlVector_a547dd5c56a7be54acb7c44f7fdf52c57}\label{structController_1_1ControlVector_a547dd5c56a7be54acb7c44f7fdf52c57}} 
-{\bfseries Control\+Vector} (double \hyperlink{structController_1_1ControlVector_af8d8ff93ddf343a13a35bba355d39976}{v}, double \hyperlink{structController_1_1ControlVector_ad5963169c4ea0c021cb923191aef7ed3}{omega})
-\end{DoxyCompactItemize}
+\hyperlink{structController_1_1ControlVector_a547dd5c56a7be54acb7c44f7fdf52c57}{Control\+Vector} (double \hyperlink{structController_1_1ControlVector_af8d8ff93ddf343a13a35bba355d39976}{v}, double \hyperlink{structController_1_1ControlVector_ad5963169c4ea0c021cb923191aef7ed3}{omega})
+\begin{DoxyCompactList}\small\item\em Construct a new Control Vector object. \end{DoxyCompactList}\end{DoxyCompactItemize}
 \subsection*{Public Attributes}
 \begin{DoxyCompactItemize}
 \item 
 \mbox{\Hypertarget{structController_1_1ControlVector_af8d8ff93ddf343a13a35bba355d39976}\label{structController_1_1ControlVector_af8d8ff93ddf343a13a35bba355d39976}} 
 double \hyperlink{structController_1_1ControlVector_af8d8ff93ddf343a13a35bba355d39976}{v}
-\begin{DoxyCompactList}\small\item\em Linear velocity. \end{DoxyCompactList}\item 
+\begin{DoxyCompactList}\small\item\em Linear velocity of plattform. \end{DoxyCompactList}\item 
 \mbox{\Hypertarget{structController_1_1ControlVector_ad5963169c4ea0c021cb923191aef7ed3}\label{structController_1_1ControlVector_ad5963169c4ea0c021cb923191aef7ed3}} 
 double \hyperlink{structController_1_1ControlVector_ad5963169c4ea0c021cb923191aef7ed3}{omega}
-\begin{DoxyCompactList}\small\item\em Angular velocity. \end{DoxyCompactList}\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em Angular velocity of plattform. \end{DoxyCompactList}\end{DoxyCompactItemize}
+
+
+\subsection{Detailed Description}
+Defines the controllers output. 
+
+\subsection{Constructor \& Destructor Documentation}
+\mbox{\Hypertarget{structController_1_1ControlVector_a547dd5c56a7be54acb7c44f7fdf52c57}\label{structController_1_1ControlVector_a547dd5c56a7be54acb7c44f7fdf52c57}} 
+\index{Controller\+::\+Control\+Vector@{Controller\+::\+Control\+Vector}!Control\+Vector@{Control\+Vector}}
+\index{Control\+Vector@{Control\+Vector}!Controller\+::\+Control\+Vector@{Controller\+::\+Control\+Vector}}
+\subsubsection{\texorpdfstring{Control\+Vector()}{ControlVector()}}
+{\footnotesize\ttfamily Controller\+::\+Control\+Vector\+::\+Control\+Vector (\begin{DoxyParamCaption}\item[{double}]{v,  }\item[{double}]{omega }\end{DoxyParamCaption})\hspace{0.3cm}{\ttfamily [inline]}}
+
+
+
+Construct a new Control Vector object. 
+
+
+\begin{DoxyParams}{Parameters}
+{\em v} & Linear velocity of plattform \\
+\hline
+{\em omega} & Angular velocity of plattform \\
+\hline
+\end{DoxyParams}
 
 
 The documentation for this struct was generated from the following file\+:\begin{DoxyCompactItemize}
