--- a/multi_robot_controller/docs/latex/annotated.tex
+++ b/multi_robot_controller/docs/latex/annotated.tex
@@ -4,7 +4,7 @@ Here are the classes, structs, unions and interfaces with brief descriptions\+:\
 \item\contentsline{section}{\hyperlink{classConstrainedrigid__motionRos}{Constrainedrigid\+\_\+motion\+Ros} }{\pageref{classConstrainedrigid__motionRos}}{}
 \item\contentsline{section}{\hyperlink{classConstrainedrigid__motionTf}{Constrainedrigid\+\_\+motion\+Tf} }{\pageref{classConstrainedrigid__motionTf}}{}
 \item\contentsline{section}{\hyperlink{classController}{Controller} }{\pageref{classController}}{}
-\item\contentsline{section}{\hyperlink{structController_1_1ControlVector}{Controller\+::\+Control\+Vector} }{\pageref{structController_1_1ControlVector}}{}
+\item\contentsline{section}{\hyperlink{structController_1_1ControlVector}{Controller\+::\+Control\+Vector} \\*Defines the controllers output }{\pageref{structController_1_1ControlVector}}{}
 \item\contentsline{section}{\hyperlink{classInputAllocException}{Input\+Alloc\+Exception} }{\pageref{classInputAllocException}}{}
 \item\contentsline{section}{\hyperlink{classInputBase}{Input\+Base} }{\pageref{classInputBase}}{}
 \item\contentsline{section}{\hyperlink{classInputOdom}{Input\+Odom} }{\pageref{classInputOdom}}{}
@@ -17,6 +17,6 @@ Here are the classes, structs, unions and interfaces with brief descriptions\+:\
 \item\contentsline{section}{\hyperlink{classOrientationFeedForward}{Orientation\+Feed\+Forward} \\*A Orientation feed forward class. It uses a given orientation and calculates a robot arm pose that compansates the motion by the change of orientation (null space motion) }{\pageref{classOrientationFeedForward}}{}
 \item\contentsline{section}{\hyperlink{classPassTroughController}{Pass\+Trough\+Controller} }{\pageref{classPassTroughController}}{}
 \item\contentsline{section}{\hyperlink{classRosOrientationFeedForwardBase}{Ros\+Orientation\+Feed\+Forward\+Base} \\*A Orientation feed forward class. It implements parameter loading and initialisation for the Orientation Feed Forward class }{\pageref{classRosOrientationFeedForwardBase}}{}
-\item\contentsline{section}{\hyperlink{structController_1_1State}{Controller\+::\+State} }{\pageref{structController_1_1State}}{}
+\item\contentsline{section}{\hyperlink{structController_1_1State}{Controller\+::\+State} \\*Defines the state representations within the \hyperlink{classController}{Controller} }{\pageref{structController_1_1State}}{}
 \item\contentsline{section}{\hyperlink{classTfOrientationFeedForward}{Tf\+Orientation\+Feed\+Forward} \\*A Tf implementation of the Orientation\+Feeed\+Forward class. It contains a tf listener that listens to a specific transformations and uses the data as input data for the feed forward control }{\pageref{classTfOrientationFeedForward}}{}
 \end{DoxyCompactList}
