--- a/multi_robot_controller/docs/latex/d7/d7a/group__FeedForward.tex
+++ b/multi_robot_controller/docs/latex/d7/d7a/group__FeedForward.tex
@@ -5,6 +5,10 @@
 \item 
 class \hyperlink{classMsgOrientationFeedForward}{Msg\+Orientation\+Feed\+Forward$<$ T $>$}
 \begin{DoxyCompactList}\small\item\em A Ros implementation of the Orientation\+Feeed\+Forward class. It contains a ros Subscriber that listens to a specific message and uses the message data as input data for the feed forward control. \end{DoxyCompactList}\item 
+class \hyperlink{classOrientationFeedForward}{Orientation\+Feed\+Forward}
+\begin{DoxyCompactList}\small\item\em A Orientation feed forward class. It uses a given orientation and calculates a robot arm pose that compansates the motion by the change of orientation (null space motion). \end{DoxyCompactList}\item 
+class \hyperlink{classRosOrientationFeedForwardBase}{Ros\+Orientation\+Feed\+Forward\+Base}
+\begin{DoxyCompactList}\small\item\em A Orientation feed forward class. It implements parameter loading and initialisation for the Orientation Feed Forward class. \end{DoxyCompactList}\item 
 class \hyperlink{classTfOrientationFeedForward}{Tf\+Orientation\+Feed\+Forward}
 \begin{DoxyCompactList}\small\item\em A Tf implementation of the Orientation\+Feeed\+Forward class. It contains a tf listener that listens to a specific transformations and uses the data as input data for the feed forward control. \end{DoxyCompactList}\end{DoxyCompactItemize}
 
