--- a/multi_robot_controller/docs/latex/d8/d46/classConstrainedrigid__motion.tex
+++ b/multi_robot_controller/docs/latex/d8/d46/classConstrainedrigid__motion.tex
@@ -12,21 +12,23 @@ Inheritance diagram for Constrainedrigid\+\_\+motion\+:\nopagebreak
 \subsection*{Public Member Functions}
 \begin{DoxyCompactItemize}
 \item 
-{\bfseries Constrainedrigid\+\_\+motion} (Eigen\+::\+Vector3d reference)
-\item 
-void {\bfseries update\+Input\+State} (Eigen\+::\+Vector3d state, Eigen\+::\+Vector3d d\+\_\+state, double time)
-\item 
-Eigen\+::\+Vector3d {\bfseries get\+Diff\+State} ()
-\item 
-Eigen\+::\+Vector3d {\bfseries get\+State} ()
-\item 
-void {\bfseries set\+Reference} (Eigen\+::\+Vector3d ref)
-\end{DoxyCompactItemize}
+\hyperlink{group__RigidMotion_ga2754df22fa5a20dfc6094c33258f13e2}{Constrainedrigid\+\_\+motion} ()
+\begin{DoxyCompactList}\small\item\em Construct a new \hyperlink{classConstrainedrigid__motion}{Constrainedrigid\+\_\+motion} object. \end{DoxyCompactList}\item 
+\hyperlink{group__RigidMotion_ga1db11e0353c9a9f08e78fb935b0cee96}{Constrainedrigid\+\_\+motion} (Eigen\+::\+Vector3d reference)
+\begin{DoxyCompactList}\small\item\em Construct a new \hyperlink{classConstrainedrigid__motion}{Constrainedrigid\+\_\+motion} object with given refrence vector. \end{DoxyCompactList}\item 
+void \hyperlink{group__RigidMotion_ga67803463eb8fcb37eec415292fa6a13f}{update\+Input\+State} (Eigen\+::\+Vector3d state, Eigen\+::\+Vector3d d\+\_\+state, double time)
+\begin{DoxyCompactList}\small\item\em Update procedure for the motion states. \end{DoxyCompactList}\item 
+Eigen\+::\+Vector3d \hyperlink{group__RigidMotion_ga8540758697945dc27502fcb557bb4871}{get\+Diff\+State} ()
+\begin{DoxyCompactList}\small\item\em Get the Velocities of the destination. \end{DoxyCompactList}\item 
+Eigen\+::\+Vector3d \hyperlink{group__RigidMotion_ga1a34b67dd58d3137628811dfab7f54a1}{get\+State} ()
+\begin{DoxyCompactList}\small\item\em Get the State of destination. \end{DoxyCompactList}\item 
+void \hyperlink{group__RigidMotion_ga2cc2728f1d7865deea62a7fe540eee1a}{set\+Reference} (Eigen\+::\+Vector3d ref)
+\begin{DoxyCompactList}\small\item\em Set the reference from source to destination. \end{DoxyCompactList}\end{DoxyCompactItemize}
 \subsection*{Static Public Member Functions}
 \begin{DoxyCompactItemize}
 \item 
-static Eigen\+::\+Matrix3d {\bfseries create\+Diff\+Drive\+Locking} ()
-\end{DoxyCompactItemize}
+static Eigen\+::\+Matrix3d \hyperlink{group__RigidMotion_ga8f1f65bf1494ab1ddc8fe3d2af5353a4}{create\+Diff\+Drive\+Locking} ()
+\begin{DoxyCompactList}\small\item\em Create a differential drive locking matrix. \end{DoxyCompactList}\end{DoxyCompactItemize}
 
 
 The documentation for this class was generated from the following files\+:\begin{DoxyCompactItemize}
