--- a/multi_robot_controller/docs/latex/da/d35/structController_1_1State.tex
+++ b/multi_robot_controller/docs/latex/da/d35/structController_1_1State.tex
@@ -1,11 +1,22 @@
 \hypertarget{structController_1_1State}{}\section{Controller\+:\+:State Struct Reference}
 \label{structController_1_1State}\index{Controller\+::\+State@{Controller\+::\+State}}
+
+
+Defines the state representations within the \hyperlink{classController}{Controller}.  
+
+
+
+
+{\ttfamily \#include $<$controller.\+h$>$}
+
 \subsection*{Public Member Functions}
 \begin{DoxyCompactItemize}
 \item 
-\mbox{\Hypertarget{structController_1_1State_ab75213d196a8198fec43b6737aaac530}\label{structController_1_1State_ab75213d196a8198fec43b6737aaac530}} 
-{\bfseries State} (tf\+::\+Pose pose, tf\+::\+Vector3 lin\+\_\+vel, tf\+::\+Vector3 ang\+\_\+vel)
-\end{DoxyCompactItemize}
+\mbox{\Hypertarget{structController_1_1State_abfb9cbceeaec3f0b70756e0856eff81c}\label{structController_1_1State_abfb9cbceeaec3f0b70756e0856eff81c}} 
+\hyperlink{structController_1_1State_abfb9cbceeaec3f0b70756e0856eff81c}{State} ()
+\begin{DoxyCompactList}\small\item\em Construct a new \hyperlink{structController_1_1State}{State} object. \end{DoxyCompactList}\item 
+\hyperlink{structController_1_1State_ab75213d196a8198fec43b6737aaac530}{State} (tf\+::\+Pose pose, tf\+::\+Vector3 lin\+\_\+vel, tf\+::\+Vector3 ang\+\_\+vel)
+\begin{DoxyCompactList}\small\item\em Construct a new \hyperlink{structController_1_1State}{State} object. \end{DoxyCompactList}\end{DoxyCompactItemize}
 \subsection*{Public Attributes}
 \begin{DoxyCompactItemize}
 \item 
@@ -18,6 +29,31 @@ tf\+::\+Vector3 {\bfseries lin\+\_\+vel}
 \mbox{\Hypertarget{structController_1_1State_a96665cd4479edd3dd44d27a1f15368dc}\label{structController_1_1State_a96665cd4479edd3dd44d27a1f15368dc}} 
 tf\+::\+Vector3 {\bfseries ang\+\_\+vel}
 \end{DoxyCompactItemize}
+
+
+\subsection{Detailed Description}
+Defines the state representations within the \hyperlink{classController}{Controller}. 
+
+\subsection{Constructor \& Destructor Documentation}
+\mbox{\Hypertarget{structController_1_1State_ab75213d196a8198fec43b6737aaac530}\label{structController_1_1State_ab75213d196a8198fec43b6737aaac530}} 
+\index{Controller\+::\+State@{Controller\+::\+State}!State@{State}}
+\index{State@{State}!Controller\+::\+State@{Controller\+::\+State}}
+\subsubsection{\texorpdfstring{State()}{State()}}
+{\footnotesize\ttfamily Controller\+::\+State\+::\+State (\begin{DoxyParamCaption}\item[{tf\+::\+Pose}]{pose,  }\item[{tf\+::\+Vector3}]{lin\+\_\+vel,  }\item[{tf\+::\+Vector3}]{ang\+\_\+vel }\end{DoxyParamCaption})}
+
+
+
+Construct a new \hyperlink{structController_1_1State}{State} object. 
+
+
+\begin{DoxyParams}{Parameters}
+{\em pose} & Pose of the mobile robot in space \\
+\hline
+{\em lin\+\_\+vel} & Linear velocity of the robot in space \\
+\hline
+{\em ang\+\_\+vel} & Angular velocity of the robot in space \\
+\hline
+\end{DoxyParams}
 
 
 The documentation for this struct was generated from the following files\+:\begin{DoxyCompactItemize}
