--- a/multi_robot_controller/docs/latex/df/d1b/group__RigidMotion.tex
+++ b/multi_robot_controller/docs/latex/df/d1b/group__RigidMotion.tex
@@ -12,27 +12,115 @@ class \hyperlink{classConstrainedrigid__motionTf}{Constrainedrigid\+\_\+motion\+
 \subsection*{Functions}
 \begin{DoxyCompactItemize}
 \item 
-\mbox{\Hypertarget{group__RigidMotion_ga1db11e0353c9a9f08e78fb935b0cee96}\label{group__RigidMotion_ga1db11e0353c9a9f08e78fb935b0cee96}} 
-{\bfseries Constrainedrigid\+\_\+motion\+::\+Constrainedrigid\+\_\+motion} (Eigen\+::\+Vector3d reference)
-\item 
-\mbox{\Hypertarget{group__RigidMotion_ga67803463eb8fcb37eec415292fa6a13f}\label{group__RigidMotion_ga67803463eb8fcb37eec415292fa6a13f}} 
-void {\bfseries Constrainedrigid\+\_\+motion\+::update\+Input\+State} (Eigen\+::\+Vector3d state, Eigen\+::\+Vector3d d\+\_\+state, double time)
-\item 
-\mbox{\Hypertarget{group__RigidMotion_ga8540758697945dc27502fcb557bb4871}\label{group__RigidMotion_ga8540758697945dc27502fcb557bb4871}} 
-Eigen\+::\+Vector3d {\bfseries Constrainedrigid\+\_\+motion\+::get\+Diff\+State} ()
-\item 
-\mbox{\Hypertarget{group__RigidMotion_ga1a34b67dd58d3137628811dfab7f54a1}\label{group__RigidMotion_ga1a34b67dd58d3137628811dfab7f54a1}} 
-Eigen\+::\+Vector3d {\bfseries Constrainedrigid\+\_\+motion\+::get\+State} ()
-\item 
-\mbox{\Hypertarget{group__RigidMotion_ga2cc2728f1d7865deea62a7fe540eee1a}\label{group__RigidMotion_ga2cc2728f1d7865deea62a7fe540eee1a}} 
-void {\bfseries Constrainedrigid\+\_\+motion\+::set\+Reference} (Eigen\+::\+Vector3d ref)
-\item 
-\mbox{\Hypertarget{group__RigidMotion_ga8f1f65bf1494ab1ddc8fe3d2af5353a4}\label{group__RigidMotion_ga8f1f65bf1494ab1ddc8fe3d2af5353a4}} 
-static Eigen\+::\+Matrix3d {\bfseries Constrainedrigid\+\_\+motion\+::create\+Diff\+Drive\+Locking} ()
-\item 
+\mbox{\Hypertarget{group__RigidMotion_ga2754df22fa5a20dfc6094c33258f13e2}\label{group__RigidMotion_ga2754df22fa5a20dfc6094c33258f13e2}} 
+\hyperlink{group__RigidMotion_ga2754df22fa5a20dfc6094c33258f13e2}{Constrainedrigid\+\_\+motion\+::\+Constrainedrigid\+\_\+motion} ()
+\begin{DoxyCompactList}\small\item\em Construct a new \hyperlink{classConstrainedrigid__motion}{Constrainedrigid\+\_\+motion} object. \end{DoxyCompactList}\item 
+\hyperlink{group__RigidMotion_ga1db11e0353c9a9f08e78fb935b0cee96}{Constrainedrigid\+\_\+motion\+::\+Constrainedrigid\+\_\+motion} (Eigen\+::\+Vector3d reference)
+\begin{DoxyCompactList}\small\item\em Construct a new \hyperlink{classConstrainedrigid__motion}{Constrainedrigid\+\_\+motion} object with given refrence vector. \end{DoxyCompactList}\item 
+void \hyperlink{group__RigidMotion_ga67803463eb8fcb37eec415292fa6a13f}{Constrainedrigid\+\_\+motion\+::update\+Input\+State} (Eigen\+::\+Vector3d state, Eigen\+::\+Vector3d d\+\_\+state, double time)
+\begin{DoxyCompactList}\small\item\em Update procedure for the motion states. \end{DoxyCompactList}\item 
+Eigen\+::\+Vector3d \hyperlink{group__RigidMotion_ga8540758697945dc27502fcb557bb4871}{Constrainedrigid\+\_\+motion\+::get\+Diff\+State} ()
+\begin{DoxyCompactList}\small\item\em Get the Velocities of the destination. \end{DoxyCompactList}\item 
+Eigen\+::\+Vector3d \hyperlink{group__RigidMotion_ga1a34b67dd58d3137628811dfab7f54a1}{Constrainedrigid\+\_\+motion\+::get\+State} ()
+\begin{DoxyCompactList}\small\item\em Get the State of destination. \end{DoxyCompactList}\item 
+void \hyperlink{group__RigidMotion_ga2cc2728f1d7865deea62a7fe540eee1a}{Constrainedrigid\+\_\+motion\+::set\+Reference} (Eigen\+::\+Vector3d ref)
+\begin{DoxyCompactList}\small\item\em Set the reference from source to destination. \end{DoxyCompactList}\item 
+static Eigen\+::\+Matrix3d \hyperlink{group__RigidMotion_ga8f1f65bf1494ab1ddc8fe3d2af5353a4}{Constrainedrigid\+\_\+motion\+::create\+Diff\+Drive\+Locking} ()
+\begin{DoxyCompactList}\small\item\em Create a differential drive locking matrix. \end{DoxyCompactList}\item 
 \mbox{\Hypertarget{group__RigidMotion_ga5af2a56bafb5ce299234c63ac25257a0}\label{group__RigidMotion_ga5af2a56bafb5ce299234c63ac25257a0}} 
 void {\bfseries Constrainedrigid\+\_\+motion\+Tf\+::update\+Input\+State} (tf\+::\+Pose pose, tf\+::\+Vector3 lin\+\_\+vel, tf\+::\+Vector3 ang\+\_\+vel, double time)
 \end{DoxyCompactItemize}
 
 
 \subsection{Detailed Description}
+
+
+\subsection{Function Documentation}
+\mbox{\Hypertarget{group__RigidMotion_ga1db11e0353c9a9f08e78fb935b0cee96}\label{group__RigidMotion_ga1db11e0353c9a9f08e78fb935b0cee96}} 
+\index{Rigid\+Motion@{Rigid\+Motion}!Constrainedrigid\+\_\+motion@{Constrainedrigid\+\_\+motion}}
+\index{Constrainedrigid\+\_\+motion@{Constrainedrigid\+\_\+motion}!Rigid\+Motion@{Rigid\+Motion}}
+\subsubsection{\texorpdfstring{Constrainedrigid\+\_\+motion()}{Constrainedrigid\_motion()}}
+{\footnotesize\ttfamily Constrainedrigid\+\_\+motion\+::\+Constrainedrigid\+\_\+motion (\begin{DoxyParamCaption}\item[{Eigen\+::\+Vector3d}]{reference }\end{DoxyParamCaption})}
+
+
+
+Construct a new \hyperlink{classConstrainedrigid__motion}{Constrainedrigid\+\_\+motion} object with given refrence vector. 
+
+
+\begin{DoxyParams}{Parameters}
+{\em reference} & 3D Vector that describes the x,y,phi offset from point to transformed point \\
+\hline
+\end{DoxyParams}
+\mbox{\Hypertarget{group__RigidMotion_ga8f1f65bf1494ab1ddc8fe3d2af5353a4}\label{group__RigidMotion_ga8f1f65bf1494ab1ddc8fe3d2af5353a4}} 
+\index{Rigid\+Motion@{Rigid\+Motion}!create\+Diff\+Drive\+Locking@{create\+Diff\+Drive\+Locking}}
+\index{create\+Diff\+Drive\+Locking@{create\+Diff\+Drive\+Locking}!Rigid\+Motion@{Rigid\+Motion}}
+\subsubsection{\texorpdfstring{create\+Diff\+Drive\+Locking()}{createDiffDriveLocking()}}
+{\footnotesize\ttfamily Eigen\+::\+Matrix3d Constrainedrigid\+\_\+motion\+::create\+Diff\+Drive\+Locking (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})\hspace{0.3cm}{\ttfamily [static]}}
+
+
+
+Create a differential drive locking matrix. 
+
+\begin{DoxyReturn}{Returns}
+Eigen\+::\+Matrix3d differential drive locking matrix 
+\end{DoxyReturn}
+\mbox{\Hypertarget{group__RigidMotion_ga8540758697945dc27502fcb557bb4871}\label{group__RigidMotion_ga8540758697945dc27502fcb557bb4871}} 
+\index{Rigid\+Motion@{Rigid\+Motion}!get\+Diff\+State@{get\+Diff\+State}}
+\index{get\+Diff\+State@{get\+Diff\+State}!Rigid\+Motion@{Rigid\+Motion}}
+\subsubsection{\texorpdfstring{get\+Diff\+State()}{getDiffState()}}
+{\footnotesize\ttfamily Eigen\+::\+Vector3d Constrainedrigid\+\_\+motion\+::get\+Diff\+State (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
+
+
+
+Get the Velocities of the destination. 
+
+\begin{DoxyReturn}{Returns}
+Eigen\+::\+Vector3d Velocities (state derivatives) of the destination 
+\end{DoxyReturn}
+\mbox{\Hypertarget{group__RigidMotion_ga1a34b67dd58d3137628811dfab7f54a1}\label{group__RigidMotion_ga1a34b67dd58d3137628811dfab7f54a1}} 
+\index{Rigid\+Motion@{Rigid\+Motion}!get\+State@{get\+State}}
+\index{get\+State@{get\+State}!Rigid\+Motion@{Rigid\+Motion}}
+\subsubsection{\texorpdfstring{get\+State()}{getState()}}
+{\footnotesize\ttfamily Eigen\+::\+Vector3d Constrainedrigid\+\_\+motion\+::get\+State (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
+
+
+
+Get the State of destination. 
+
+\begin{DoxyReturn}{Returns}
+Eigen\+::\+Vector3d State vector of the destination 
+\end{DoxyReturn}
+\mbox{\Hypertarget{group__RigidMotion_ga2cc2728f1d7865deea62a7fe540eee1a}\label{group__RigidMotion_ga2cc2728f1d7865deea62a7fe540eee1a}} 
+\index{Rigid\+Motion@{Rigid\+Motion}!set\+Reference@{set\+Reference}}
+\index{set\+Reference@{set\+Reference}!Rigid\+Motion@{Rigid\+Motion}}
+\subsubsection{\texorpdfstring{set\+Reference()}{setReference()}}
+{\footnotesize\ttfamily void Constrainedrigid\+\_\+motion\+::set\+Reference (\begin{DoxyParamCaption}\item[{Eigen\+::\+Vector3d}]{ref }\end{DoxyParamCaption})}
+
+
+
+Set the reference from source to destination. 
+
+
+\begin{DoxyParams}{Parameters}
+{\em ref} & x,y,phi representation of the reference \\
+\hline
+\end{DoxyParams}
+\mbox{\Hypertarget{group__RigidMotion_ga67803463eb8fcb37eec415292fa6a13f}\label{group__RigidMotion_ga67803463eb8fcb37eec415292fa6a13f}} 
+\index{Rigid\+Motion@{Rigid\+Motion}!update\+Input\+State@{update\+Input\+State}}
+\index{update\+Input\+State@{update\+Input\+State}!Rigid\+Motion@{Rigid\+Motion}}
+\subsubsection{\texorpdfstring{update\+Input\+State()}{updateInputState()}}
+{\footnotesize\ttfamily void Constrainedrigid\+\_\+motion\+::update\+Input\+State (\begin{DoxyParamCaption}\item[{Eigen\+::\+Vector3d}]{state,  }\item[{Eigen\+::\+Vector3d}]{d\+\_\+state,  }\item[{double}]{time }\end{DoxyParamCaption})}
+
+
+
+Update procedure for the motion states. 
+
+
+\begin{DoxyParams}{Parameters}
+{\em state} & State representation of the source \\
+\hline
+{\em d\+\_\+state} & Velocities (state derivatives) of the source \\
+\hline
+{\em time} & Timestamp, the update was procceded at (important for numerical derivatives) \\
+\hline
+\end{DoxyParams}
