--- a/multi_robot_controller/docs/latex/annotated.tex
+++ b/multi_robot_controller/docs/latex/annotated.tex
@@ -1,8 +1,8 @@
 \section{Class List}
 Here are the classes, structs, unions and interfaces with brief descriptions\+:\begin{DoxyCompactList}
-\item\contentsline{section}{\hyperlink{classConstrainedrigid__motion}{Constrainedrigid\+\_\+motion} }{\pageref{classConstrainedrigid__motion}}{}
-\item\contentsline{section}{\hyperlink{classConstrainedrigid__motionRos}{Constrainedrigid\+\_\+motion\+Ros} }{\pageref{classConstrainedrigid__motionRos}}{}
-\item\contentsline{section}{\hyperlink{classConstrainedrigid__motionTf}{Constrainedrigid\+\_\+motion\+Tf} }{\pageref{classConstrainedrigid__motionTf}}{}
+\item\contentsline{section}{\hyperlink{classConstrainedRigidMotion}{Constrained\+Rigid\+Motion} }{\pageref{classConstrainedRigidMotion}}{}
+\item\contentsline{section}{\hyperlink{classConstrainedRigidMotionRos}{Constrained\+Rigid\+Motion\+Ros} }{\pageref{classConstrainedRigidMotionRos}}{}
+\item\contentsline{section}{\hyperlink{classConstrainedRigidMotionTf}{Constrained\+Rigid\+Motion\+Tf} }{\pageref{classConstrainedRigidMotionTf}}{}
 \item\contentsline{section}{\hyperlink{classController}{Controller} }{\pageref{classController}}{}
 \item\contentsline{section}{\hyperlink{structController_1_1ControlVector}{Controller\+::\+Control\+Vector} \\*Defines the controllers output }{\pageref{structController_1_1ControlVector}}{}
 \item\contentsline{section}{\hyperlink{classInputAllocException}{Input\+Alloc\+Exception} }{\pageref{classInputAllocException}}{}
