--- a/multi_robot_controller/docs/latex/d2/d4e/classPassTroughController.tex
+++ b/multi_robot_controller/docs/latex/d2/d4e/classPassTroughController.tex
@@ -11,8 +11,7 @@ Inheritance diagram for Pass\+Trough\+Controller\+:\nopagebreak
 \end{figure}
 
 
-Collaboration diagram for Pass\+Trough\+Controller\+:
-\nopagebreak
+Collaboration diagram for Pass\+Trough\+Controller\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
