--- a/multi_robot_controller/docs/latex/df/d1b/group__RigidMotion.tex
+++ b/multi_robot_controller/docs/latex/df/d1b/group__RigidMotion.tex
@@ -3,32 +3,32 @@
 \subsection*{Classes}
 \begin{DoxyCompactItemize}
 \item 
-class \hyperlink{classConstrainedrigid__motion}{Constrainedrigid\+\_\+motion}
+class \hyperlink{classConstrainedRigidMotion}{Constrained\+Rigid\+Motion}
 \item 
-class \hyperlink{classConstrainedrigid__motionRos}{Constrainedrigid\+\_\+motion\+Ros}
+class \hyperlink{classConstrainedRigidMotionRos}{Constrained\+Rigid\+Motion\+Ros}
 \item 
-class \hyperlink{classConstrainedrigid__motionTf}{Constrainedrigid\+\_\+motion\+Tf}
+class \hyperlink{classConstrainedRigidMotionTf}{Constrained\+Rigid\+Motion\+Tf}
 \end{DoxyCompactItemize}
 \subsection*{Functions}
 \begin{DoxyCompactItemize}
 \item 
-\mbox{\Hypertarget{group__RigidMotion_ga2754df22fa5a20dfc6094c33258f13e2}\label{group__RigidMotion_ga2754df22fa5a20dfc6094c33258f13e2}} 
-\hyperlink{group__RigidMotion_ga2754df22fa5a20dfc6094c33258f13e2}{Constrainedrigid\+\_\+motion\+::\+Constrainedrigid\+\_\+motion} ()
-\begin{DoxyCompactList}\small\item\em Construct a new \hyperlink{classConstrainedrigid__motion}{Constrainedrigid\+\_\+motion} object. \end{DoxyCompactList}\item 
-\hyperlink{group__RigidMotion_ga1db11e0353c9a9f08e78fb935b0cee96}{Constrainedrigid\+\_\+motion\+::\+Constrainedrigid\+\_\+motion} (Eigen\+::\+Vector3d reference)
-\begin{DoxyCompactList}\small\item\em Construct a new \hyperlink{classConstrainedrigid__motion}{Constrainedrigid\+\_\+motion} object with given refrence vector. \end{DoxyCompactList}\item 
-void \hyperlink{group__RigidMotion_ga67803463eb8fcb37eec415292fa6a13f}{Constrainedrigid\+\_\+motion\+::update\+Input\+State} (Eigen\+::\+Vector3d state, Eigen\+::\+Vector3d d\+\_\+state, double time)
+\mbox{\Hypertarget{group__RigidMotion_gaa85deb237e7407287829b6596997b210}\label{group__RigidMotion_gaa85deb237e7407287829b6596997b210}} 
+\hyperlink{group__RigidMotion_gaa85deb237e7407287829b6596997b210}{Constrained\+Rigid\+Motion\+::\+Constrained\+Rigid\+Motion} ()
+\begin{DoxyCompactList}\small\item\em Construct a new \hyperlink{classConstrainedRigidMotion}{Constrained\+Rigid\+Motion} object. \end{DoxyCompactList}\item 
+\hyperlink{group__RigidMotion_ga603d9727e46dc49dcf22b24870d15779}{Constrained\+Rigid\+Motion\+::\+Constrained\+Rigid\+Motion} (Eigen\+::\+Vector3d reference)
+\begin{DoxyCompactList}\small\item\em Construct a new \hyperlink{classConstrainedRigidMotion}{Constrained\+Rigid\+Motion} object with given refrence vector. \end{DoxyCompactList}\item 
+void \hyperlink{group__RigidMotion_ga80649fcba3aed41550ba463f405d051b}{Constrained\+Rigid\+Motion\+::update\+Input\+State} (Eigen\+::\+Vector3d state, Eigen\+::\+Vector3d d\+\_\+state, double time)
 \begin{DoxyCompactList}\small\item\em Update procedure for the motion states. \end{DoxyCompactList}\item 
-Eigen\+::\+Vector3d \hyperlink{group__RigidMotion_ga8540758697945dc27502fcb557bb4871}{Constrainedrigid\+\_\+motion\+::get\+Diff\+State} ()
+Eigen\+::\+Vector3d \hyperlink{group__RigidMotion_ga59bdced4bb2e565bc39312e5328507ef}{Constrained\+Rigid\+Motion\+::get\+Diff\+State} ()
 \begin{DoxyCompactList}\small\item\em Get the Velocities of the destination. \end{DoxyCompactList}\item 
-Eigen\+::\+Vector3d \hyperlink{group__RigidMotion_ga1a34b67dd58d3137628811dfab7f54a1}{Constrainedrigid\+\_\+motion\+::get\+State} ()
+Eigen\+::\+Vector3d \hyperlink{group__RigidMotion_gabde902d2f91035cd5054a33dab4acc48}{Constrained\+Rigid\+Motion\+::get\+State} ()
 \begin{DoxyCompactList}\small\item\em Get the State of destination. \end{DoxyCompactList}\item 
-void \hyperlink{group__RigidMotion_ga2cc2728f1d7865deea62a7fe540eee1a}{Constrainedrigid\+\_\+motion\+::set\+Reference} (Eigen\+::\+Vector3d ref)
+void \hyperlink{group__RigidMotion_gac71f6e395c1d63f54cfb837b5526236b}{Constrained\+Rigid\+Motion\+::set\+Reference} (Eigen\+::\+Vector3d ref)
 \begin{DoxyCompactList}\small\item\em Set the reference from source to destination. \end{DoxyCompactList}\item 
-static Eigen\+::\+Matrix3d \hyperlink{group__RigidMotion_ga8f1f65bf1494ab1ddc8fe3d2af5353a4}{Constrainedrigid\+\_\+motion\+::create\+Diff\+Drive\+Locking} ()
+static Eigen\+::\+Matrix3d \hyperlink{group__RigidMotion_gad4fb6e13815454559ec7e52b291489af}{Constrained\+Rigid\+Motion\+::create\+Diff\+Drive\+Locking} ()
 \begin{DoxyCompactList}\small\item\em Create a differential drive locking matrix. \end{DoxyCompactList}\item 
-\mbox{\Hypertarget{group__RigidMotion_ga5af2a56bafb5ce299234c63ac25257a0}\label{group__RigidMotion_ga5af2a56bafb5ce299234c63ac25257a0}} 
-void {\bfseries Constrainedrigid\+\_\+motion\+Tf\+::update\+Input\+State} (tf\+::\+Pose pose, tf\+::\+Vector3 lin\+\_\+vel, tf\+::\+Vector3 ang\+\_\+vel, double time)
+\mbox{\Hypertarget{group__RigidMotion_gabb5eee0f91ee59d0eda733f8d5769094}\label{group__RigidMotion_gabb5eee0f91ee59d0eda733f8d5769094}} 
+void {\bfseries Constrained\+Rigid\+Motion\+Tf\+::update\+Input\+State} (tf\+::\+Pose pose, tf\+::\+Vector3 lin\+\_\+vel, tf\+::\+Vector3 ang\+\_\+vel, double time)
 \end{DoxyCompactItemize}
 
 
@@ -36,26 +36,26 @@ void {\bfseries Constrainedrigid\+\_\+motion\+Tf\+::update\+Input\+State} (tf\+:
 
 
 \subsection{Function Documentation}
-\mbox{\Hypertarget{group__RigidMotion_ga1db11e0353c9a9f08e78fb935b0cee96}\label{group__RigidMotion_ga1db11e0353c9a9f08e78fb935b0cee96}} 
-\index{Rigid\+Motion@{Rigid\+Motion}!Constrainedrigid\+\_\+motion@{Constrainedrigid\+\_\+motion}}
-\index{Constrainedrigid\+\_\+motion@{Constrainedrigid\+\_\+motion}!Rigid\+Motion@{Rigid\+Motion}}
-\subsubsection{\texorpdfstring{Constrainedrigid\+\_\+motion()}{Constrainedrigid\_motion()}}
-{\footnotesize\ttfamily Constrainedrigid\+\_\+motion\+::\+Constrainedrigid\+\_\+motion (\begin{DoxyParamCaption}\item[{Eigen\+::\+Vector3d}]{reference }\end{DoxyParamCaption})}
+\mbox{\Hypertarget{group__RigidMotion_ga603d9727e46dc49dcf22b24870d15779}\label{group__RigidMotion_ga603d9727e46dc49dcf22b24870d15779}} 
+\index{Rigid\+Motion@{Rigid\+Motion}!Constrained\+Rigid\+Motion@{Constrained\+Rigid\+Motion}}
+\index{Constrained\+Rigid\+Motion@{Constrained\+Rigid\+Motion}!Rigid\+Motion@{Rigid\+Motion}}
+\subsubsection{\texorpdfstring{Constrained\+Rigid\+Motion()}{ConstrainedRigidMotion()}}
+{\footnotesize\ttfamily Constrained\+Rigid\+Motion\+::\+Constrained\+Rigid\+Motion (\begin{DoxyParamCaption}\item[{Eigen\+::\+Vector3d}]{reference }\end{DoxyParamCaption})}
 
 
 
-Construct a new \hyperlink{classConstrainedrigid__motion}{Constrainedrigid\+\_\+motion} object with given refrence vector. 
+Construct a new \hyperlink{classConstrainedRigidMotion}{Constrained\+Rigid\+Motion} object with given refrence vector. 
 
 
 \begin{DoxyParams}{Parameters}
 {\em reference} & 3D Vector that describes the x,y,phi offset from point to transformed point \\
 \hline
 \end{DoxyParams}
-\mbox{\Hypertarget{group__RigidMotion_ga8f1f65bf1494ab1ddc8fe3d2af5353a4}\label{group__RigidMotion_ga8f1f65bf1494ab1ddc8fe3d2af5353a4}} 
+\mbox{\Hypertarget{group__RigidMotion_gad4fb6e13815454559ec7e52b291489af}\label{group__RigidMotion_gad4fb6e13815454559ec7e52b291489af}} 
 \index{Rigid\+Motion@{Rigid\+Motion}!create\+Diff\+Drive\+Locking@{create\+Diff\+Drive\+Locking}}
 \index{create\+Diff\+Drive\+Locking@{create\+Diff\+Drive\+Locking}!Rigid\+Motion@{Rigid\+Motion}}
 \subsubsection{\texorpdfstring{create\+Diff\+Drive\+Locking()}{createDiffDriveLocking()}}
-{\footnotesize\ttfamily Eigen\+::\+Matrix3d Constrainedrigid\+\_\+motion\+::create\+Diff\+Drive\+Locking (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})\hspace{0.3cm}{\ttfamily [static]}}
+{\footnotesize\ttfamily Eigen\+::\+Matrix3d Constrained\+Rigid\+Motion\+::create\+Diff\+Drive\+Locking (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})\hspace{0.3cm}{\ttfamily [static]}}
 
 
 
@@ -64,11 +64,11 @@ Create a differential drive locking matrix.
 \begin{DoxyReturn}{Returns}
 Eigen\+::\+Matrix3d differential drive locking matrix 
 \end{DoxyReturn}
-\mbox{\Hypertarget{group__RigidMotion_ga8540758697945dc27502fcb557bb4871}\label{group__RigidMotion_ga8540758697945dc27502fcb557bb4871}} 
+\mbox{\Hypertarget{group__RigidMotion_ga59bdced4bb2e565bc39312e5328507ef}\label{group__RigidMotion_ga59bdced4bb2e565bc39312e5328507ef}} 
 \index{Rigid\+Motion@{Rigid\+Motion}!get\+Diff\+State@{get\+Diff\+State}}
 \index{get\+Diff\+State@{get\+Diff\+State}!Rigid\+Motion@{Rigid\+Motion}}
 \subsubsection{\texorpdfstring{get\+Diff\+State()}{getDiffState()}}
-{\footnotesize\ttfamily Eigen\+::\+Vector3d Constrainedrigid\+\_\+motion\+::get\+Diff\+State (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
+{\footnotesize\ttfamily Eigen\+::\+Vector3d Constrained\+Rigid\+Motion\+::get\+Diff\+State (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
 
 
 
@@ -77,11 +77,11 @@ Get the Velocities of the destination.
 \begin{DoxyReturn}{Returns}
 Eigen\+::\+Vector3d Velocities (state derivatives) of the destination 
 \end{DoxyReturn}
-\mbox{\Hypertarget{group__RigidMotion_ga1a34b67dd58d3137628811dfab7f54a1}\label{group__RigidMotion_ga1a34b67dd58d3137628811dfab7f54a1}} 
+\mbox{\Hypertarget{group__RigidMotion_gabde902d2f91035cd5054a33dab4acc48}\label{group__RigidMotion_gabde902d2f91035cd5054a33dab4acc48}} 
 \index{Rigid\+Motion@{Rigid\+Motion}!get\+State@{get\+State}}
 \index{get\+State@{get\+State}!Rigid\+Motion@{Rigid\+Motion}}
 \subsubsection{\texorpdfstring{get\+State()}{getState()}}
-{\footnotesize\ttfamily Eigen\+::\+Vector3d Constrainedrigid\+\_\+motion\+::get\+State (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
+{\footnotesize\ttfamily Eigen\+::\+Vector3d Constrained\+Rigid\+Motion\+::get\+State (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
 
 
 
@@ -90,11 +90,11 @@ Get the State of destination.
 \begin{DoxyReturn}{Returns}
 Eigen\+::\+Vector3d State vector of the destination 
 \end{DoxyReturn}
-\mbox{\Hypertarget{group__RigidMotion_ga2cc2728f1d7865deea62a7fe540eee1a}\label{group__RigidMotion_ga2cc2728f1d7865deea62a7fe540eee1a}} 
+\mbox{\Hypertarget{group__RigidMotion_gac71f6e395c1d63f54cfb837b5526236b}\label{group__RigidMotion_gac71f6e395c1d63f54cfb837b5526236b}} 
 \index{Rigid\+Motion@{Rigid\+Motion}!set\+Reference@{set\+Reference}}
 \index{set\+Reference@{set\+Reference}!Rigid\+Motion@{Rigid\+Motion}}
 \subsubsection{\texorpdfstring{set\+Reference()}{setReference()}}
-{\footnotesize\ttfamily void Constrainedrigid\+\_\+motion\+::set\+Reference (\begin{DoxyParamCaption}\item[{Eigen\+::\+Vector3d}]{ref }\end{DoxyParamCaption})}
+{\footnotesize\ttfamily void Constrained\+Rigid\+Motion\+::set\+Reference (\begin{DoxyParamCaption}\item[{Eigen\+::\+Vector3d}]{ref }\end{DoxyParamCaption})}
 
 
 
@@ -105,11 +105,11 @@ Set the reference from source to destination.
 {\em ref} & x,y,phi representation of the reference \\
 \hline
 \end{DoxyParams}
-\mbox{\Hypertarget{group__RigidMotion_ga67803463eb8fcb37eec415292fa6a13f}\label{group__RigidMotion_ga67803463eb8fcb37eec415292fa6a13f}} 
+\mbox{\Hypertarget{group__RigidMotion_ga80649fcba3aed41550ba463f405d051b}\label{group__RigidMotion_ga80649fcba3aed41550ba463f405d051b}} 
 \index{Rigid\+Motion@{Rigid\+Motion}!update\+Input\+State@{update\+Input\+State}}
 \index{update\+Input\+State@{update\+Input\+State}!Rigid\+Motion@{Rigid\+Motion}}
 \subsubsection{\texorpdfstring{update\+Input\+State()}{updateInputState()}}
-{\footnotesize\ttfamily void Constrainedrigid\+\_\+motion\+::update\+Input\+State (\begin{DoxyParamCaption}\item[{Eigen\+::\+Vector3d}]{state,  }\item[{Eigen\+::\+Vector3d}]{d\+\_\+state,  }\item[{double}]{time }\end{DoxyParamCaption})}
+{\footnotesize\ttfamily void Constrained\+Rigid\+Motion\+::update\+Input\+State (\begin{DoxyParamCaption}\item[{Eigen\+::\+Vector3d}]{state,  }\item[{Eigen\+::\+Vector3d}]{d\+\_\+state,  }\item[{double}]{time }\end{DoxyParamCaption})}
 
 
 
