--- a/multi_robot_controller/docs/latex/hierarchy.tex
+++ b/multi_robot_controller/docs/latex/hierarchy.tex
@@ -1,10 +1,10 @@
 \section{Class Hierarchy}
 This inheritance list is sorted roughly, but not completely, alphabetically\+:\begin{DoxyCompactList}
-\item \contentsline{section}{Constrainedrigid\+\_\+motion}{\pageref{classConstrainedrigid__motion}}{}
+\item \contentsline{section}{Constrained\+Rigid\+Motion}{\pageref{classConstrainedRigidMotion}}{}
 \begin{DoxyCompactList}
-\item \contentsline{section}{Constrainedrigid\+\_\+motion\+Ros}{\pageref{classConstrainedrigid__motionRos}}{}
+\item \contentsline{section}{Constrained\+Rigid\+Motion\+Ros}{\pageref{classConstrainedRigidMotionRos}}{}
 \begin{DoxyCompactList}
-\item \contentsline{section}{Constrainedrigid\+\_\+motion\+Tf}{\pageref{classConstrainedrigid__motionTf}}{}
+\item \contentsline{section}{Constrained\+Rigid\+Motion\+Tf}{\pageref{classConstrainedRigidMotionTf}}{}
 \end{DoxyCompactList}
 \end{DoxyCompactList}
 \item \contentsline{section}{Controller}{\pageref{classController}}{}
