--- a/multi_robot_controller/docs/latex/d2/d09/classLyapunovController.tex
+++ b/multi_robot_controller/docs/latex/d2/d09/classLyapunovController.tex
@@ -11,8 +11,7 @@ Inheritance diagram for Lyapunov\+Controller\+:\nopagebreak
 \end{figure}
 
 
-Collaboration diagram for Lyapunov\+Controller\+:
-\nopagebreak
+Collaboration diagram for Lyapunov\+Controller\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
