--- a/multi_robot_controller/docs/latex/d9/d85/classController.tex
+++ b/multi_robot_controller/docs/latex/d9/d85/classController.tex
@@ -11,8 +11,7 @@ Inheritance diagram for Controller\+:\nopagebreak
 \end{figure}
 
 
-Collaboration diagram for Controller\+:
-\nopagebreak
+Collaboration diagram for Controller\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
